--- a/templates/recommend.html
+++ b/templates/recommend.html
@@ -44,6 +44,7 @@
     </div>
     <div class="song-info">
         <p><strong>{{ music.title }}</strong> by <em>{{ music.artist }}</em></p>
+        <p>Genre: <strong>{{ music.genre }}</strong></p>
     </div>
     <a href="{{ url_for('index') }}" class="back-link">← Back to Home</a>
 </body>
