--- a/templates/main.html
+++ b/templates/main.html
@@ -1,34 +1,10 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>하나를 골라야 한다면...</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="container">
-        <h1>하나를 골라야 한다면...</h1>
-        <div id="imageContainer">
-            <img id="displayedImage" src="" alt="Displayed Image" style="display: none;">
-        </div>
-        <div id="question">이 질문은 어떤가요?</div>
-        <div class="choices">
-            <button id="option1" class="choice-btn">옵션 1</button>
-            <button id="option2" class="choice-btn">옵션 2</button>
-        </div>
-        <div id="feedback"></div>
-    </div>
-    <script src="script.js"></script>
-</body>
-</html> -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>음악 취향 테스트</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
     <!-- 메인 화면 -->
@@ -56,6 +32,6 @@
         <p class="resultDesc"></p>
     </div>
 
-    <script src="scripts.js"></script>
+    <script src="{{ url_for('static', filename='scripts.js') }}"></script>
 </body>
 </html>
